applications/manifests/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-custom
  namespace: jenkins
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/name: jenkins-custom
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8080  # Route 8443 to Jenkins's actual 8080 port
  selector:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
